the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-] added data structure TMCG_Bigint
* [2019-09-29] tests: added t-tmcg (basic checks for Schindelhauer's toolbox)
* [2019-09-14] raised the requirement of libgcrypt version to >= 1.8.0, of
               libgpg-error version to >= 1.27, and of libgmp to >= 6.1.2 
* [2019-09-07] RFC4880: changed prefered compression from UNCOMPRESSED to ZIP
* [2019-09-02] RFC4880: added Attested Certifications stuff (cf. RFC 4880bis)
* [2019-09-01] RFC4880: added member decryptionfpr in TMCG_OpenPGP_Message to
               store the decryption context (fingerprint) for handling Intended
               Recipient Fingerprint subpackets (cf. RFC 4880bis)
* [2019-08-31] aiounicast_*: added Reset() to provide e.g. authentication reset
* [2019-08-30] RFC4880: added tmcg_openpgp_export_flags_t and changed method
               TMCG_OpenPGP_Pubkey::Export() to allow a restricted export
* [2019-08-30] RFC4880: changed ArmorEncode() to provide armor annotations
* [2019-08-29] aiounicast_*: added improved authentication by sequence numbers
* [2019-08-28] RFC4880: added quick-check in TMCG_OpenPGP_Signature
* [2019-08-25] RFC4880: added SHA3 from RFC 4880bis in several methods
* [2019-08-25] RFC4880: added tmcg_openpgp_multiple_octets_t and changed members
               from TMCG_OpenPGP_Signature (i.e. embeddedsigs and recipientfprs)
* [2019-08-15] RBC: added out-of-order handler to retrieve missing messages
* [2019-08-13] RBC: added member fifo_skip and a mechanism to skip FIFO-ordering
* [2019-08-12] RBC: added member ID_log to trace the history of ID operations
* [2019-08-12] RFC4880: improved MessageParse() for detecting invalid structure